[AOD-646] Fix remove omniform button z-index

--- a/app/components/Omniform/Omniform.scss
+++ b/app/components/Omniform/Omniform.scss
@@ -52,7 +52,7 @@
   position: absolute;
   right: 0;
   top: 0;
-  z-index: 10;
+  z-index: 11;
 }
 
 .Omniform__actor-switcher {
